changes case management

--- a/src/locales/en/translations.json
+++ b/src/locales/en/translations.json
@@ -1,6 +1,6 @@
 {
     "Intro": "Introduction",
-    "Service Platform": "Service System Platform",
+    "service_platform": "Service System Platform",
     "Menu":"Menu",
     "Sign Up":"Sign Up",
     "Sign In":"Sign In"
