--- a/src/locales/de/translations.json
+++ b/src/locales/de/translations.json
@@ -1,5 +1,5 @@
 {
-    "Introduction": "Einführung",
+    "service_platform": "Einführung",
     "is an internationalization-framework which offers a complete solution to localize your product from web to mobile and desktop": "ist ein Internationalisierungs-Framework, das eine Komplettlösung für die Lokalisierung Ihres Produkts vom Web auf das Handy und den Desktop bietet",
     "Plugins to detect the user language": "Plugins zur Erkennung der Benutzersprache",
     "Plugins to load translations": "Plugins zum Laden von Übersetzungen",
