has string extracted for super admin module

--- a/src/locales/en/translations.json
+++ b/src/locales/en/translations.json
@@ -1,9 +1,11 @@
 {
-    "Intro": "Introduction",
+    "intro": "Introduction",
     "service_platform": "Service System Platform",
-    "Menu":"Menu",
+    "caps_service_system":"SERVICE SYSTEM",
+    "menu":"Menu",
     "sign_up":"Sign Up",
-    "Sign_in":"Sign In",
+    "sign_out":"Sign Out",
+    "sign_in":"Sign In",
     "email":"Email",
     "password": "Password",
     "password_hint": "Hint: You are required to use a sufficiently strong password. Password must be more than 7 characters, atleast one special character and numbers and letter in Upper case.",
@@ -11,8 +13,217 @@
     "already_have_account": "Already have account?",
     "dont_have_account": "Don't have account?",
     "remember_me":"Remember me",
-    "forgot_password":"Forgot Password",
+    "forgot_password":"Forgot Password?",
     "forgot_password_hint":"Fill up your email to get the link to recover your account.",
     "setup_password":"Setup Password",
-    "copyright": "2020 service system. All rights reserved."
+    "copyright": "2020 service system. All rights reserved.",
+    "be_warned":"Be Warned",
+    "check_your_email_for_confirmation":"Check your email for confirmation",
+    "resend_verification_link":"Resend verification link",
+    "submit":"Submit",
+    "recover_email_info":"Fill up your email to get the link to recover your account.",
+    "loading":"Loading ...",
+    "select_user_type":"Select User Type",
+    "select_role":"Select your role in this system.",
+    "you_are_a_service_provider":"You are a service provider",
+    "you_are_looking_for_services":" You are looking for services",
+    "continue":"Continue",
+    "is_this_account_for_a_company":" Is this account for a company?",
+    "i_am_company_admin":"Yes, I am a company admin",
+    "i_am_single_user":"No, I am a single user",
+    "account_settings":"Account settings",
+    "change_password":"Change password",
+    "profile":"Profile",
+    "options":"Options",
+    "setup_company_profile_greeting":"Welcome! Quickly setup your company profile to get started.",
+    "fill_up_details":"Fill up your detailed information",
+    "service_type":"Service Type:",
+    "law":"law",
+    "account":"account",
+    "both":"both",
+    "hint_for_service_category":"Hint: You can type your service categories in the form field if they are not listed in dropdown options",
+    "service_categories":"Service categories:", 
+    "info_will_help":"This information will help you later.",
+    "fill_company_info":"Fill up your company information",
+    "company_name":"Company Name",
+    "address":"Address",
+   "phone_number":"Phone Number",
+   "registration_number":" Registration Number",
+   "setup_person_profile_greeting":"  Welcome! Quickly setup your profile to get started.",
+   "fill_person_info":"Fill up your personal information",
+   "name":"Name", 
+   "personal_number":" Personal Number",
+   "preference_heading":"Preferences you select here will be used to display information to you.",
+   "fill_preference":"Fill up your preferences",
+   "currency":"Currency",
+   "date_format":"Date Format",
+   "attach_files":"Attach Files",
+   "optional":"optional",
+   "write_a_text":" Write a text?",
+   "reset_password":"Reset Password",
+   "password_keeping_hint":"Hint: To comply with our Strong Password policy, you are required to use a sufficiently strong password. Password must be more than 7 characters.",
+   "no_new_notification":"No new notifications",
+   "change":"Change",
+   "new_password":"New Password",
+   "delete_employee":"Delete employee. Are you sure?",
+   "delete_employee_account":"You are about to delete employee account.",
+   "delete_emp_warning":"Once a employee account is permanently deleted, all thedetails of the employee will be immediately removed from the system.",
+   "delete_emp_info":" This action cannot be undone later. You will loose this employee's details. Please confirm the following action:",
+   "delete":"Delete",
+   "cancel":"Cancel",
+   "delete_ok":" Yes, Delete it!",
+   "employees":"Employees",
+   "add_employees":"Add Employees",
+   "verified":"Verified",
+   "unverified":"Unverified",
+   "total_case":"Total Cases",
+   "user_since":"User Since",
+   "status":"Status",
+   "action":"Action",
+   "details":"Details",
+   "employee_email":"Employee Email",
+   "invite_employees":"Invite Employees",
+   "invite":"Invite ",
+   "invite_and_continue":"Invite and continue",
+   "invitation_sent_successfully":"Invitation email sent successfully",
+   "manage_roles":"Manage Roles",
+   "caps_total_case":" TOTAL CASES",
+   "caps_user_since":"USER SINCE",
+   "caps_status":"STATUS",
+   "caps_active":"ACTIVE",
+   "caps_unverified":"UNVERIFIED",
+   "caps_verified":"VERIFIED",
+   "received":"Received",
+   "on_progress":"On-Progress",
+   "completed":"Completed",
+   "title":"Title",
+   "case_tags":"Case Tags",
+   "requested_on":"Requested On",
+   "requested":"Requested",
+   "proposal_declined":"Proposal Declined",
+   "proposal_forwarded":"Proposal Forwarded",
+   "client_waiting_contract":"Client waiting contract paper",
+   "contract_paper_sent":"Contract Paper Sent",
+   "signed_contract_paper_received":"Signed Contract Paper Received",
+   "view_details":"View Details",
+   "next":"Next",
+   "previous":"Previous",
+   "roles_and_permission":"Roles and Permissions",
+   "admin_only":"Admin only",
+   "service_management":"Service Management",
+   "client_management":"Client Management",
+   "case_forwarded_successfully":"The case has been forwarded successfully",
+   "final_payment_transefer":"Final payment transferred to service provider via stripe.",
+   "forwarded":"Forwarded",
+   "waiting_contract_paper":"Waiting Contract Paper",
+   "signed_contract_paper_sent":" Signed Contract Paper Sent",
+   "awaiting_advance_installment":"Awaiting Advance Installment",
+   "completion_requested":"Completion Requested",
+   "awaiting_final_installment":" Awaiting Final Installment",
+   "final_payment_received":"Final Payment Received",
+   "closed":"Closed",
+   "sp_removed_from_list":"Service Provider removed from forwarded list",
+   "no_details_to_show":"No details to show",
+   "caps_proposed_budget":"PROPOSED BUDGET",
+   "caps_case_req_on":"CASE REQUESTED ON",
+   "caps_case_forwarded":"CASE FORWARDED",
+   "caps_case_received":"CASE RECEIVED",
+   "caps_proposal_forwarded":"PROPOSAL FORWARDED",
+   "caps_waiting_contract_paper":"WAITING CONTRACT PAPER",
+   "caps_contract_paper_received":"CONTRACT PAPER RECEIVED",
+   "caps_signed_contract_paper_sent":"SIGNED CONTRACT PAPER SENT",
+   "caps_awaiting_advance_installment":"AWAITING ADVANCE INSTALLMENT",
+   "caps_case_completion_requested":"CASE COMPLETION REQUESTED",
+   "caps_awaiting_final_installment":"AWAITING FINAL INSTALLMENT",
+   "caps_final_payment_received":"FINAL PAYMENT RECEIVED",
+   "caps_closed":"CLOSED",
+   "caps_on_progress":"ON-PROGRESS",
+   "caps_fee":"FEE",
+   "caps_sp":"SERVICE PROVIDER",
+   "tags":"Tags",
+   "proposals":"Proposals",
+   "transactions":" Transactions",
+   "forwarded_cases":"Forwarded cases",
+   "on_progress_cases":"On-progress cases",
+   "view_proposal_for_this_case":"View Proposals for this case",
+   "undo":"Undo",
+   "advance":"Advance",
+   "time_taken":"Time Taken",
+   "proposed_deadline":"Proposed Deadline",
+   "sent_date":"Sent Date",
+   "sent_by":"Sent By",
+   "date":"Date",
+   "phase":"Phase",
+   "amount":"Amount",
+   "type":"Type",
+   "advance_payment":"Advance Payment",
+   "final_payment":"Final Payment",
+   "sent":"Sent",
+   "pending":"Pending",
+   "payment_type":"Payment Type",
+   "send_funds_to":"Send funds to",
+   "you_are_about_to_pay":"You are about to pay",
+   "stripe_balance":"stripe balance",
+   "for_the_case":"for the case",
+   "from_your_strip_account_is_being_paid_to":"from your stripe account is being paid to",
+   "on_behalf_of":"on behalf of",
+   "your_available_stripe_balance":"Your available stripe balance",
+   "total_case_fee":"Total case fee",
+   "application_fee":"Application fee",
+   "amount_to_be_paid":"Amount to be paid",
+   "release_payment":"Release Payment",
+   "deactivate_acc_permission":"Deactivate account. Are you sure?",
+   "deactive_acc_warning":"You are about to deactivate  account.",
+   "deactive_acc_info":"Once a employee account is deactivated, immediately they will not be allowed to login to their account in the system.",
+   "deactive_action_info":"This action will stop acoount from using any of the feature of the system. Please confirm the following action",
+   "deactivate":"Deactivate",
+   "confirm_deactivate":"Yes, Deactiate it!",
+   "activate_acc":"Activate account. Are you sure?",
+   "activate_account_warning":"You are about to activate  account.",
+   "activate_account_info":"Once a employee account is activated, immediately they will be allowed to login to their account in the system.",
+   "activate_action_info":"This action will allow account from using all of the feature of the system. Please confirm the following action",
+   "activate":"Activate",
+   "activate_account_confirm":"Yes, Activate it!",
+   "accounts":"Accounts",
+   "add_accounts":"Add account",
+   "client_admin":"Client Admin",
+   "client_single":"Client Single",
+   "sp_admin":"Service Provider Admin",
+   "sp_single":"Service Provider Single",
+   "subscription_expiry":"Subscription Expiry",
+   "account_expiry":"Account Expiry",
+   "edit_acc_expiry":"Edit the Account expiry date",
+   "acc_expiry_date":"Account Expiry Date",
+   "update_it":"Update it!",
+   "commission_rate_updated":"Commission Rate Updated successfully",
+   "acc_expiry_date_updated":"Account expiry date updated successfully",
+   "caps_expires_on":"EXPIRES ON",
+   "caps_commission":"COMMISSION",
+   "caps_not_set":"NOT SET",
+   "cases":"Cases",
+   "services":"Services",
+   "client":"Client",
+   "role":"Role",
+   "assigned_on":"Assigned on",
+   "time_spent":"Time spent",
+   "rate":"rate",
+   "avg_time_taken":"Average Time Taken",
+   "created_on":"Created on",
+   "commission_rate":"Commission rate",
+   "avg_time":"Average Time",
+   "hours":"hours",
+   "active":"Active",
+   "inactive":"Inactive",
+   "delete_acc_confirm":"Delete employee. Are you sure?",
+   "delete_acc_info":"You are about to delete employee account.",
+   "delete_acc_warning":"Once a employee account is permanently deleted, all the details of the employee will be immediately removed from the system.",
+   "delect_action_confirm":"This action cannot be undone later. You will loose this employee's details. Please confirm the following action",
+   "delete_confirm_done":"Yes, Delete it!",
+   "total_cases":"Total Cases",
+   "case":"case",
+   "subscription":"Subscription",
+   "paid_for":"Paid For",
+   "payment":"Payment",
+   "dashboard":"Dashboard"
+   
 }
