changes internationalization and localization

--- a/src/locales/en/translations.json
+++ b/src/locales/en/translations.json
@@ -67,7 +67,7 @@
    "new_password":"New Password",
    "delete_employee":"Delete employee. Are you sure?",
    "delete_employee_account":"You are about to delete employee account.",
-   "delete_emp_warning":"Once a employee account is permanently deleted, all thedetails of the employee will be immediately removed from the system.",
+   "delete_emp_warning":"Once a employee account is permanently deleted, all the details of the employee will be immediately removed from the system.",
    "delete_emp_info":" This action cannot be undone later. You will loose this employee's details. Please confirm the following action:",
    "delete":"Delete",
    "cancel":"Cancel",
@@ -110,6 +110,7 @@
    "previous":"Previous",
    "roles_and_permission":"Roles and Permissions",
    "admin_only":"Admin only",
+   "case_management":"Case Management",
    "service_management":"Service Management",
    "client_management":"Client Management",
    "case_forwarded_successfully":"The case has been forwarded successfully",
@@ -224,6 +225,105 @@
    "subscription":"Subscription",
    "paid_for":"Paid For",
    "payment":"Payment",
-   "dashboard":"Dashboard"
-   
+   "dashboard":"Dashboard",
+   "tasks":"Tasks",
+   "intake_form":"Intake Form",
+   "timer_save_sign_out_now":"Timer saved. You can sign out now.",
+   "timer_active_to_sign_out":" Your timer is active now. Inorder to save the timer record you need to close it before you sign out.",
+   "stripe_onboard_info":"You need to onboard on stripe through this platform inorder to receive payments from your clients.",
+   "onboard_with_stripe":"Onboard with stripe",
+   "stripe_acc_info_not_completed":"Your stripe account information is not completed.Please continue to on-board for receiving payments from your clients.",
+   "continue_onboarding":"Continue On-boarding",
+   "acc_expire_on":"Your account will expire on",
+   "get_subscription_info":"You need to get subscription for uninterrupted service.",
+   "get_annual_subs":"Get Annual Subscription",
+   "subs_for_month":"Subscribe for a month?",
+   "edit_service_categories":"Edit the service categories",
+   "edit_preferences":"Edit the preferences",
+   "date_preferences":"Date Preferences",
+   "edit_currency_preferences":"Edit the currency preferences",
+   "currency_preferences":"Currency Preferences",
+   "choose_language_preferences":"Choose your prefered language",
+   "language_preferences":"Language Preferences",
+   "profile_details_updated_successfully":"Profile Details Updated successfully",
+   "caps_address":"ADDRESS",
+   "caps_joined_on":"JOINED ON",
+   "caps_contact_number":"CONTACT NUMBER",
+   "basic_info":"Basic Information",
+   "caps_service_categories":"SERVICE CATEGORIES",
+   "caps_registration_number":"REGISTRATION NUMBER",
+   "caps_personal_number":"PERSONAL NUMBER",
+   "caps_date_format":"DATE FORMAT",
+   "caps_currency_preferences":"CURRENCY PREFERENCES",
+   "caps_language":"LANGUAGE",
+   "caps_linked_with_google":"LINKED WITH GOOGLE",
+   "caps_revoke":"REVOKE",
+   "caps_not_linked_with_google":"NOT LINKED WITH GOOGLE",
+   "caps_link":"LINK",
+   "caps_subs_expiry":"SUBSCRIPTION EXPIRY",
+   "intro_video":"Introduction Video",
+   "intro_desc":"Introduction Description",
+   "intro_text":"Introduction Text",
+   "roles_updated_successfully":"Roles updated successfully.",
+   "employee_permission_info":"Employee will have full-fledged access to the case management module as you have with this level of permission.",
+   "assigned_case_management":"Assigned Case Management",
+   "collaborator":"Collaborator",
+   "employee_as_collaborator":"Employee's role for the case assignment will be shown as collaborator.",
+   "reviewer":"Reviewer",
+   "employee_as_reviewer":"Employee's role for the case assignment will be shown as reviewer",
+   "client_intake_form":"Client Intake Form",
+   "employee_intake_form_permission":"Employee will have full-fledged access to the intake form module as you have with this level of permission.",
+   "custom_task":"Custom Task",
+   "employee_custom_task_permission":"Employee will have full-fledged access to the custom task management module as you have with this level of permission.",
+   "employee_case_management_permission":"Employee will have full-fledged access to the case management module as you have with this level of permission.",
+   "assigned_case_permission":"Employee will have be able to access only the cases they have been assigned by you with this level of permission.",
+   "assigned_case_management_permission":" Employee will have be able to access only the cases they have been assigned by you with this level of permission.",
+   "platform_received_final_payment":"Platform Received Final Payment",
+   "make_proposal":"Make Proposal",
+   "delete_file":" Delete the file. Are you sure?",
+   "delete_file_info":"You are about to delete the file.",
+   "delete_file_warning":"Once a file is permanently deleted, all the details of the file will be immediately removed from the system.",
+   "delete_file_action_warning":"This action cannot be undone later. You will loose this file and its details. Please confirm the following action:",
+   "delete_the_file":"Delete the file",
+   "contract_paper_uploaded_successfully":"Contract paper uploaded successfully",
+   "file_uploaded_successfully":"File uploaded successfully",
+   "file_removed_successfullu":"File removed successfully",
+   "proposal_sent_successfully":"Proposal sent successfully",
+   "stop_timer":"Stop Timer",
+   "yes":"Yes",
+   "no":"No",
+   "start_timer":"Start Timer",
+   "send_contract_paper":"Send Contract Paper",
+   "view_contaract_paper":"View Contract Paper",
+   "caps_received":"RECEIVED",
+   "caps_client_waiting_contract_paper":"CLIENT WAITING CONTRACT PAPER",
+   "caps_contract_paper_sent":"CONTRACT PAPER SENT",
+   "caps_signed_contract_paper_received":"SIGNED CONTRACT PAPER RECEIVED",
+   "caps_awaiting_advance_payment":"AWAITING ADVANCE PAYMENT",
+   "caps_platform_received_final_payment":"PLATFORM RECEIVED FINAL PAYMENT",
+   "caps_total_time_worked":"TOTAL TIME WORKED",
+   "caps_not_started_yet":"NOT STARTED YET",
+   "caps_case_requested_on":" CASE REQUESTED ON",
+   "caps_client":"CLIENT",
+   "timers":"Timers",
+   "assignment":"Assignment",
+   "work_with_drive":"Work with Google Drive",
+   "my_proposals":"My Proposal",
+   "clients_intro":"Client's Introduction",
+   "related_documents":"Related Documents",
+   "min":"min",
+   "sec":"sec",
+   "hrs":"hrs",
+   "caps_timer":"TIMER",
+   "your_files":"Your Files",
+   "add_files":"Add Files",
+   "caps_advance_payment":"ADVANCE PAYMENT",
+   "caps_payment_type":"PAYMENT TYPE",
+   "caps_on_review":"ON REVIEW",
+   "caps_declined":"DECLINED",
+   "caps_accepted":"ACCEPTED",
+   "caps_proposal_sent_on":"PROPOSAL SENT ON",
+   "caps_proposed_fee":"PROPOSED FEE",
+   "files_from_client":"Files from client",
+   "clients":"Clients"  
 }
