changes environment files and login and registration area flow

--- a/src/locales/en/translations.json
+++ b/src/locales/en/translations.json
@@ -126,7 +126,7 @@
    "sp_removed_from_list":"Service Provider removed from forwarded list",
    "no_details_to_show":"No details to show",
    "caps_proposed_budget":"PROPOSED BUDGET",
-   "caps_case_req_on":"CASE REQUESTED ON",
+   "caps_case_req_on":"REQUESTED ON",
    "caps_case_forwarded":"CASE FORWARDED",
    "caps_case_received":"CASE RECEIVED",
    "caps_proposal_forwarded":"PROPOSAL FORWARDED",
@@ -247,8 +247,8 @@
    "language_preferences":"Language Preferences",
    "profile_details_updated_successfully":"Profile Details Updated successfully",
    "caps_address":"ADDRESS",
-   "caps_joined_on":"JOINED ON",
-   "caps_contact_number":"CONTACT NUMBER",
+   "caps_joined_on":"JOINED",
+   "caps_contact_number":"CONTACT",
    "basic_info":"Basic Information",
    "caps_service_categories":"SERVICE CATEGORIES",
    "caps_registration_number":"REGISTRATION NUMBER",
@@ -303,14 +303,14 @@
    "caps_platform_received_final_payment":"PLATFORM RECEIVED FINAL PAYMENT",
    "caps_total_time_worked":"TOTAL TIME WORKED",
    "caps_not_started_yet":"NOT STARTED YET",
-   "caps_case_requested_on":" CASE REQUESTED ON",
+   "caps_case_requested_on":"REQUESTED ON",
    "caps_client":"CLIENT",
    "timers":"Timers",
    "assignment":"Assignment",
    "work_with_drive":"Work with Google Drive",
-   "my_proposals":"My Proposal",
-   "clients_intro":"Client's Introduction",
-   "related_documents":"Related Documents",
+   "my_proposals":"Proposal",
+   "clients_intro":"Client",
+   "related_documents":"Documents",
    "min":"min",
    "sec":"sec",
    "hrs":"hrs",
@@ -326,5 +326,13 @@
    "caps_proposed_fee":"PROPOSED FEE",
    "files_from_client":"Files from client",
    "clients":"Clients",
-   "caps_total_cases": "Total Cases"  
+   "caps_total_cases": "Total Cases",
+   "account_management": "Account Management" ,
+   "account_management_description": "Employee will have full-fledged access to the account management module as you have with this level of permission.",
+   "employee_added_successfully": "Employee added sucessfully",
+   "employee_deleted_successfully": "Employee deleted sucessfully",
+   "people_added_successfully": "People added sucessfully",
+   "contract_paper_confirmed_successfully": "Contract confirmed sucessfully",
+   "request_completion": "Request Completion",
+   "google_revoked_sucessfully": "Google account revoked sucessfully"
 }
